# mojo-budget

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO
src/: bill.c  bill.h  main.c  main_ncurses.c  main_sdl.c
src/budget/: bill.c  bill.h  config.c  config.h  export.c  export.h
src/core/: bill.c  bill.h  config.c  config.h  export.c  export.h  utility.c  utility.h
src/ncurses/: ncurses_init.c
src/sdl/: im_menubar.c  im_menubar.h  sdl_init.c  ui_budgetwindow.c  ui_core.h  ui_menubar.c
